--- a/settings_for_new_project/package.json
+++ b/settings_for_new_project/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "prettier": "^3.3.3",
     "stylelint": "^16.9.0"
   }
