--- a/settings_for_new_project/package.json
+++ b/settings_for_new_project/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo 'Привет!'",
+    "atomize": "atomizer -o ./dist/output.css --watch index.html",
+    "taiwind": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch ",
     "check": "prettier --check './src/**/*.{html,css,js}'",
     "format": "prettier --write './src/**/*.{html,css,js}'",
     "lint": "stylelint './src/**/*.css'",
@@ -26,13 +28,21 @@
     "gulp-concat-css": "^3.1.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^10.0.0",
+    "gulp-pug": "^5.0.0",
+    "gulp-sass": "^5.1.0",
     "html-minifier": "^4.0.0",
     "postcss": "^8.4.47",
     "postcss-combine-media-query": "^1.0.1",
     "prettier": "^3.3.3",
-    "stylelint": "^16.9.0"
+    "sass": "^1.79.3",
+    "stylelint": "^16.9.0",
+    "tailwindcss": "^3.4.13"
   },
   "dependencies": {
+    "atomizer": "^3.29.0",
     "normalize.css": "^8.0.1"
-  }
+  },
+  "browserslist": [
+    "last 5 versions"
+  ]
 }
